--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,6 @@ test:
 
 production:
   <<: *default
-  database: ingest-solarcast_production
+  database: safecast
   host: <%= ENV['DATABASE_HOST'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  su_username: safecast
-  su_password: <%= ENV['DATABASE_PASSWORD'] %>
