--- a/cron/db_settings.env
+++ b/cron/db_settings.env
@@ -7,3 +7,11 @@ export PGPASSWORD="${DATABASE_PASSWORD}"
 if [[ -n "${EXPORT_DATABASE_HOST}" ]]; then
     export PGHOST="${EXPORT_DATABASE_HOST}"
 fi
+
+if [[ -n "${EXPORT_DATABASE_USER}" ]]; then
+    export PGUSER="${EXPORT_DATABASE_USER}"
+fi
+
+if [[ -n "${EXPORT_DATABASE_PASSWORD}" ]]; then
+    export PGPASSWORD="${EXPORT_DATABASE_PASSWORD}"
+fi
