Add to //cron.yaml jobs

--- a/cron.yaml
+++ b/cron.yaml
@@ -3,3 +3,6 @@ cron:
   - name: basic_csv_dump
     url: /cron
     schedule: "0 0 * * *"
+  - name: mapview_24h_clustered.sh
+    url: /cron
+    schedule: "*/15 * * * *"
