--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ rvm:
   - 2.3.1
 addons:
   postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -U postgres -c 'create database travis_ci_test'
