Add upstart job to keep elastic search worker running

--- a/.ebextensions/workers.config
+++ b/.ebextensions/workers.config
@@ -1,4 +1,29 @@
+files:
+  "/etc/init/worker_elastic_cloud.conf":
+    content: |
+      description "Start worker for writing points to elastic cloud"
+
+      start on runlevel [2345]
+      stop on runlevel [!2345]
+
+      script
+        cd /var/app/current
+        sudo -u webapp bash -lc 'rake workers:elastic_cloud' | logger -t worker_elastic_cloud
+      end script
+
 commands:
+  start_worker_elastic_cloud:
+    command: |
+      if grep -q ELASTIC_CLOUD_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
+        if status worker_elastic_cloud | grep -q running; then
+          restart worker_elastic_cloud
+        else
+          start worker_elastic_cloud
+        fi
+      else
+        echo manual > /etc/init/worker_elastic_cloud.override
+      fi
+
   match_nginx_timeout_to_sqs_timeout:
     command: |
       VISIBILITY_TIMEOUT=$(jq -r .AWSEBVisibilityTimeout /etc/elasticbeanstalk/parameters-cache)
