Add worker respawn
Thought I'd already added this but apparently not.

--- a/.ebextensions/workers.config
+++ b/.ebextensions/workers.config
@@ -6,6 +6,9 @@ files:
       start on runlevel [2345]
       stop on runlevel [!2345]
 
+      respawn
+      respawn limit unlimited
+
       script
         cd /var/app/current
         sudo -u webapp bash -lc 'rake workers:elastic_cloud' | logger -t worker_elastic_cloud
