--- a/.ebextensions/workers.config
+++ b/.ebextensions/workers.config
@@ -30,7 +30,7 @@ commands:
   match_nginx_timeout_to_sqs_timeout:
     command: |
       VISIBILITY_TIMEOUT=$(jq -r .AWSEBVisibilityTimeout /etc/elasticbeanstalk/parameters-cache)
-      if [[ -n "${VISIBILITY_TIMEOUT}" ]]; then
+      if [[ "${VISIBILITY_TIMEOUT}" != "null" ]]; then
         echo "proxy_read_timeout ${VISIBILITY_TIMEOUT}s;" > /etc/nginx/conf.d/worker.conf
         service nginx restart
       fi
