--- a/config/database.yml
+++ b/config/database.yml
@@ -2,22 +2,25 @@ default: &default
   adapter: postgis
   pool: 5
   timeout: 5000
-  schema_search_path: "public,postgis"
-  script_dir: /usr/local/share/postgis/
+  schema_search_path: public,postgis
   encoding: unicode
   username: safecast
   password:
 
 development:
   <<: *default
-  database: ingest-solarcast_development
+  database: <%= ENV.fetch('DATABASE_NAME_DEVELOPMENT', 'ingest-solarcast_development' ) %>
+  username: <%= ENV.fetch('DATABASE_POSTGRESQL_USERNAME', 'safecast' ) %>
+  password: <%= ENV.fetch('DATABASE_POSTGRESQL_PASSWORD', '' ) %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ingest-solarcast_test
+  database: <%= ENV.fetch('DATABASE_NAME_TEST', 'ingest-solarcast_test' ) %>
+  username: <%= ENV.fetch('DATABASE_POSTGRESQL_USERNAME', 'safecast' ) %>
+  password: <%= ENV.fetch('DATABASE_POSTGRESQL_PASSWORD', '' ) %>
 
 production:
   <<: *default
