Use pushed postgresql image by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: "3"
 services:
   postgresql:
-    build:
-      context: .
-      dockerfile: Dockerfile.postgresql
+    image: safecast/postgresql:9.6
     environment:
       - POSTGRES_USER=safecast
     ports:
