--- a/.semaphore/dev-deploy.yml
+++ b/.semaphore/dev-deploy.yml
@@ -6,7 +6,7 @@ agent:
     os_image: ubuntu1804
 
 blocks:
-  - name: Main
+  - name: Dev deploy
     task:
       secrets:
         - name: aws-dev
