Properly add init job for s3 batch worker
Pretty sure I had it running in a screen before

--- a/.ebextensions/workers.config
+++ b/.ebextensions/workers.config
@@ -1,4 +1,19 @@
 files:
+  "/etc/init/worker_s3_raw.conf":
+    content: |
+      description "Start worker for writing raw points to S3"
+
+      start on runlevel [2345]
+      stop on runlevel [!2345]
+
+      respawn
+      respawn limit unlimited
+
+      script
+        cd /var/app/current
+        sudo -u webapp bash -lc 'rake workers:s3_raw' | logger -t worker_s3_raw
+      end script
+
   "/etc/init/worker_elastic_cloud.conf":
     content: |
       description "Start worker for writing points to elastic cloud"
@@ -15,7 +30,15 @@ files:
       end script
 
 commands:
-  start_worker_elastic_cloud:
+  01_match_nginx_timeout_to_sqs_timeout:
+    command: |
+      VISIBILITY_TIMEOUT=$(jq -r .AWSEBVisibilityTimeout /etc/elasticbeanstalk/parameters-cache)
+      if [[ "${VISIBILITY_TIMEOUT}" != "null" ]]; then
+        echo "proxy_read_timeout ${VISIBILITY_TIMEOUT}s;" > /etc/nginx/conf.d/worker.conf
+        service nginx restart
+      fi
+
+  02_start_worker_elastic_cloud:
     command: |
       if grep -q ELASTIC_CLOUD_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
         if status worker_elastic_cloud | grep -q running; then
@@ -27,10 +50,14 @@ commands:
         echo manual > /etc/init/worker_elastic_cloud.override
       fi
 
-  match_nginx_timeout_to_sqs_timeout:
+  03_start_worker_s3_raw:
     command: |
-      VISIBILITY_TIMEOUT=$(jq -r .AWSEBVisibilityTimeout /etc/elasticbeanstalk/parameters-cache)
-      if [[ "${VISIBILITY_TIMEOUT}" != "null" ]]; then
-        echo "proxy_read_timeout ${VISIBILITY_TIMEOUT}s;" > /etc/nginx/conf.d/worker.conf
-        service nginx restart
+      if grep -q S3_RAW_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
+        if status worker_s3_raw | grep -q running; then
+          restart worker_s3_raw
+        else
+          start worker_s3_raw
+        fi
+      else
+        echo manual > /etc/init/worker_s3_raw.override
       fi
