Alias didn't pan out

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Load schema
           command: |
             psql -h localhost -p 5432 -U safecast safecast -c 'DROP EXTENSION postgis CASCADE'
-            bundle exec rake db:schema:load --trace
+            bundle exec rake db:structure:load --trace
       - run:
           name: Run rubocop
           command: |
