Fixes to enable Postgres 11 client on Elastic Beanstalk.

--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -1,7 +1,13 @@
-packages:
-  yum:
-    postgresql95: []
-    postgresql95-devel: []
+commands:
+  install_postgres:
+    command: >
+      /usr/bin/yum -y install
+      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-libs-11.5-1PGDG.rhel6.x86_64.rpm'
+      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-11.5-1PGDG.rhel6.x86_64.rpm'
+      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-devel-11.5-1PGDG.rhel6.x86_64.rpm'
+  link_pg_config:
+    command: >
+      /bin/ln -s /usr/pgsql-11/bin/pg_config /usr/local/bin/pg_config
 
 files:
   "/etc/profile.d/z_psql.sh":
