Moved the yum remove postgres command into db.config.

--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -1,9 +1,10 @@
 commands:
   install_postgres:
-    command: >
-      /usr/bin/yum -y install
-      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-libs-11.5-1PGDG.rhel6.x86_64.rpm'
-      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-11.5-1PGDG.rhel6.x86_64.rpm'
+    command: |
+      /usr/bin/yum -y remove 'postgres*'
+      /usr/bin/yum -y install \
+      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-libs-11.5-1PGDG.rhel6.x86_64.rpm' \
+      'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-11.5-1PGDG.rhel6.x86_64.rpm' \
       'https://yum.postgresql.org/11/redhat/rhel-6-x86_64/postgresql11-devel-11.5-1PGDG.rhel6.x86_64.rpm'
   link_pg_config:
     command: >
