Added eb/saved_configs to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ test_csv_dump.last
 /docker-compose.override.yml
 /config/docker/postgresql/*.conf
 /script/rackup.pid
+.elasticbeanstalk/saved_configs
