--- a/.elasticbeanstalk/config.global.yml
+++ b/.elasticbeanstalk/config.global.yml
@@ -2,4 +2,5 @@ global:
   application_name: ingest
   default_ec2_keyname: safecastdev
   default_region: us-west-2
+  default_platform: arn:aws:elasticbeanstalk:us-west-2::platform/Puma with Ruby 2.6 running on 64bit Amazon Linux/2.11.0
   sc: git
