--- a/.ebextensions/workers.config
+++ b/.ebextensions/workers.config
@@ -11,6 +11,7 @@ files:
 
       script
         cd /var/app/current
+        logger -t worker_s3_raw 'Starting worker'
         sudo -u webapp bash -lc 'rake workers:s3_raw' | logger -t worker_s3_raw
       end script
 
@@ -26,6 +27,7 @@ files:
 
       script
         cd /var/app/current
+        logger -t worker_elastic_cloud 'Starting worker'
         sudo -u webapp bash -lc 'rake workers:elastic_cloud' | logger -t worker_elastic_cloud
       end script
 
@@ -36,28 +38,4 @@ commands:
       if [[ "${VISIBILITY_TIMEOUT}" != "null" ]]; then
         echo "proxy_read_timeout ${VISIBILITY_TIMEOUT}s;" > /etc/nginx/conf.d/worker.conf
         service nginx restart
-      fi
-
-  02_start_worker_elastic_cloud:
-    command: |
-      if grep -q ELASTIC_CLOUD_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
-        if status worker_elastic_cloud | grep -q running; then
-          restart worker_elastic_cloud
-        else
-          start worker_elastic_cloud
-        fi
-      else
-        echo manual > /etc/init/worker_elastic_cloud.override
-      fi
-
-  03_start_worker_s3_raw:
-    command: |
-      if grep -q S3_RAW_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
-        if status worker_s3_raw | grep -q running; then
-          restart worker_s3_raw
-        else
-          start worker_s3_raw
-        fi
-      else
-        echo manual > /etc/init/worker_s3_raw.override
       fi
