Seems like writing to syslog in a service definition does not work.

--- a/.ebextensions/50-post-deploy.config
+++ b/.ebextensions/50-post-deploy.config
@@ -13,21 +13,25 @@ files:
 
       if grep -q ELASTIC_CLOUD_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
         if status worker_elastic_cloud | grep -q running; then
+          logger -t worker_elastic_cloud 'Restarting worker after deploy.'
           restart worker_elastic_cloud
         else
+          logger -t worker_elastic_cloud 'Starting worker after deploy.'
           start worker_elastic_cloud
         fi
       else
-        logger -t worker_elastic_cloud 'This does not appear to be a worker node. Setting worker to manual.'
+        logger -t worker_elastic_cloud 'This does not appear to be a worker node. Setting worker to manual after deploy.'
         echo manual > /etc/init/worker_elastic_cloud.override
       fi
       if grep -q S3_RAW_INPUT_QUEUE_URL /etc/elasticbeanstalk/parameters-cache; then
         if status worker_s3_raw | grep -q running; then
+          logger -t worker_s3_raw 'Restarting worker after deploy.'
           restart worker_s3_raw
         else
+          logger -t worker_s3_raw 'Starting worker after deploy.'
           start worker_s3_raw
         fi
       else
-        logger -t worker_s3_raw 'This does not appear to be a worker node. Setting worker to manual.'
+        logger -t worker_s3_raw 'This does not appear to be a worker node. Setting worker to manual after deploy.'
         echo manual > /etc/init/worker_s3_raw.override
       fi
