--- a/db/curator/curator.yml
+++ b/db/curator/curator.yml
@@ -3,8 +3,7 @@ client:
     - 40ad140d461d810ac41ed710b5c7a5b6.us-west-2.aws.found.io
   port: 9243
   use_ssl: True
-  username: elastic
-  password: ${CURATOR_PASSWORD}
+  http_auth: ${CURATOR_AUTH}
   timeout: 30
 
 logging:
