--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,9 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install -y postgresql-client python3-pip
-            sudo pip3 install wheel
-            sudo pip3 install awsebcli awscli
+            pip3 install wheel
+            pip3 install awsebcli awscli
+            gem install bundler:1.17.3
       - restore_cache:
           keys:
             - ingest-{{ checksum "Gemfile.lock" }}
