--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           name: Install build tools
           command: |
             sudo apt-get update
-            sudo apt-get install -y postgresql-client-11 python3-pip
+            sudo apt-get install -y postgresql-client python3-pip
             pip3 install wheel
             pip3 install awsebcli awscli
             gem install bundler:1.17.3
