--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install -y postgresql-client python3-pip
+            sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+            sudo update-alternatives --set python /usr/bin/python3
             pip3 install wheel
             pip3 install awsebcli awscli
             gem install bundler:1.17.3
