--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 1
             sudo update-alternatives --set python /usr/bin/python3
             pip3 install wheel
-            pip3 install awsebcli awscli
+            pip3 install cryptography==3.3.2 awsebcli awscli
             gem install bundler:1.17.3
       - restore_cache:
           keys:
