--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
           POSTGRES_DB: safecast
           POSTGRES_PASSWORD: ""
       - image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
+        environment:
+          discovery.type: single-node
     steps:
       - checkout
       - run:
