--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
 version: "3"
 services:
   postgresql:
-    image: safecast/postgresql:9.6
+    image: mdillon/postgis:11
     environment:
       - POSTGRES_USER=safecast
+      - POSTGRES_DB=safecast
+      - POSTGRES_PASSWORD=
     ports:
       - "127.0.0.1:5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.1
+    environment:
+      discovery.type: single-node
+    ports:
+      - "127.0.0.1:9200:9200"
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
 
 volumes:
   postgres-data:
+    driver: local
+  elasticsearch-data:
     driver: local
